first-mesh/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  clusterIP: None
  ports:
  - port: 4000
    targetPort: 4000
  selector:
    name: app
