first-mesh/edge-envoy.yaml
kind: ConfigMap
apiVersion: v1
metadata:
  name: envoy-edge
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 80
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: my-service
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: local_service
              http_filters:
              - name: envoy.router
                typed_config: {}
      clusters:
      - name: local_service
        connect_timeout: 1s
        type: strict_dns
        http2_protocol_options: {}
        hosts:
        - socket_address:
            address: app.default
            port_value: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-edge
spec:
  selector:
    matchLabels:
      name: envoy-edge
  template:
    metadata:
      labels:
        name: envoy-edge
    spec:
      containers:
        - name: container1
          image: envoyproxy/envoy:v1.12.2
          ports:
            - containerPort: 80
          volumeMounts:
            - name: envoy-volume
              mountPath: /etc/envoy
      volumes:
        - name: envoy-volume
          configMap:
            name: envoy-edge
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-edge
spec:
  type: NodePort
  ports:
    - nodePort: 30000
      port: 80
      targetPort: 80
  selector:
    name: envoy-edge
