first-mesh/envoy-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  selector:
    matchLabels:
      name: app
  template:
    metadata:
      labels:
        name: app
    spec:
      containers:
        - name: container1
          image: learnk8s/service-mesh:api
          ports:
            - containerPort: 3000
        - name: container2
          image: envoyproxy/envoy:v1.12.2
          ports:
            - containerPort: 4000
          volumeMounts:
            - name: envoy-volume
              mountPath: /etc/envoy
      volumes:
        - name: envoy-volume
          configMap:
            name: envoy-app
---
kind: ConfigMap
apiVersion: v1
metadata:
  name: envoy-app
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 4000
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: my-service
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: local_service
              http_filters:
              - name: envoy.router
                typed_config: {}
      clusters:
      - name: local_service
        connect_timeout: 1s
        type: static
        hosts:
        - socket_address:
            address: 127.0.0.1
            port_value: 3000
